istio/deployment-product.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-v1
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
      version: v1
  template:
    metadata:
      labels:
        app: product-service
        version: v1
    spec:
      containers:
      - name: product-service
        image: jamesmedice/product-svc
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    app: product-service
  type: ClusterIP
---
