istio/gateway.yaml
###########################################
# IN CASE THERE IS NO GATEWAY> CREATE ONE #
###########################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: product-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - '*'
    port:
      name: tcp
      number: 5000
      protocol: TCP
