istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-virtual-service
spec:
  hosts:
    - '*'
  gateways:
    - default/product-gateway
  http:
    - match:
        - uri:
            prefix: /product/
        - uri:
            prefix: /product
      rewrite:
        uri: /
      route:
        - destination:
            host: product-service
            port:
              number: 8000
